Code formatting for consistency with Nutch